tests/ui/borrowck/borrowck-union-uninitialized.stderr
error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/borrowck-union-uninitialized.rs:13:9
   |
LL |         s.a = 0;
   |         ^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/borrowck-union-uninitialized.rs:15:9
   |
LL |         u.a = 0;
   |         ^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `s` isn't fully initialized
  --> $DIR/borrowck-union-uninitialized.rs:13:9
   |
LL |         let mut s: S;
   |             ----- binding declared here but left uninitialized
LL |         let mut u: U;
LL |         s.a = 0;
   |         ^^^^^^^ `s` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `u` isn't fully initialized
  --> $DIR/borrowck-union-uninitialized.rs:15:9
   |
LL |         let mut u: U;
   |             ----- binding declared here but left uninitialized
...
LL |         u.a = 0;
   |         ^^^^^^^ `u` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0381, E0658.
For more information about an error, try `rustc --explain E0381`.
